--- a/LocalRepo/index.html
+++ b/LocalRepo/index.html
@@ -2,3 +2,7 @@
     This is a new paragraph .
     second line of para     
 </p>
+<p>
+    This is a new paragraph .
+    second line of para     
+</p>
